--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <a id="navbar_logo" href="/">
-                <img src="/imgs/logo.webp" alt="Landscape Links Logo">
+                <img src="imgs/logo.webp" alt="Landscape Links Logo">
             </a>
             <ul class="navbar_menu">
                 <li class="navbar_item dropdown">
@@ -38,16 +38,16 @@
 
     <div class="slideshow-container">
         <div class="slide active">
-            <img src="/imgs/slide.jpg" alt="Golf Course 1">
+            <img src="imgs/slide.jpg" alt="Golf Course 1">
         </div>
         <div class="slide">
-            <img src="/imgs/slide1.jpg" alt="Golf Course 2">
+            <img src="imgs/slide1.jpg" alt="Golf Course 2">
         </div>
         <div class="slide">
-            <img src="/imgs/slide2.jpg" alt="Golf Course 3">
+            <img src="imgs/slide2.jpg" alt="Golf Course 3">
         </div>
         <div class="slide">
-            <img src="/imgs/slide4.jpg" alt="Golf Course 4">
+            <img src="imgs/slide4.jpg" alt="Golf Course 4">
         </div>
 
         <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
@@ -65,7 +65,7 @@
     <section class="info-section">
         <div class="info-container">
             <div class="info-image">
-                <img src="/imgs/slide6.jpg" alt="Our Course">
+                <img src="imgs/slide6.jpg" alt="Our Course">
             </div>
             <div class="info-text">
                 <h2>Our Course</h2>
@@ -84,7 +84,7 @@
                 <a href="dining.html" class="btn">View Menu</a>
             </div>
             <div class="info-image">
-                <img src="/imgs/driving.jpg" alt="Dining">
+                <img src="imgs/driving.jpg" alt="Dining">
             </div>
         </div>
     </section>
