--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <a id="navbar_logo" href="index.html">
-                <img src="/imgs/logo.png" alt="Landscape Links Logo">
+                <img src="imgs/logo.png" alt="Landscape Links Logo">
             </a>
             <ul class="navbar_menu">
                 <li class="navbar_item dropdown">
@@ -47,9 +47,9 @@
 
         <h3>Contact Information</h3>
         <ul>
-            <li><strong>Phone:</strong> (555) 867-5309</li>
+            <li><strong>Phone:</strong> (123) 456-7890</li>
             <li><strong>Email:</strong> landscapelinks@gmail.com</li>
-            <li><strong>Address:</strong> 1847 Fairway Drive, Richmond, VA 23233</li>
+            <li><strong>Address:</strong> 1000 Fairway Drive, Anywhere, NA 123456</li>
         </ul>
 
         <h3>Department Extensions</h3>
