--- a/golf-rates.html
+++ b/golf-rates.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <div class="navbar_container">
             <a id="navbar_logo" href="index.html">
-                <img src="/imgs/logo.png" alt="Landscape Links Logo">
+                <img src="imgs/logo.png" alt="Landscape Links Logo">
             </a>
             <ul class="navbar_menu">
                 <li class="navbar_item dropdown">
