--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="navbar_container">
-            <a id="navbar_logo" href="/">
+            <a id="navbar_logo" href="/index.html">
                 <img src="imgs/logo.webp" alt="Landscape Links Logo">
             </a>
             <ul class="navbar_menu">
