--- a/dining.html
+++ b/dining.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <!-- NAVBAR -->
     <nav class="navbar">
         <div class="navbar_container">
             <a id="navbar_logo" href="index.html">
@@ -34,49 +36,88 @@
                 </li>
             </ul>
         </div>
-    </nav><div class="page-header">
-    <h1>Dining at Landscape Links</h1>
-    <p>Exceptional cuisine in an elegant setting</p>
-</div><div class="content-section">
-    <h2>The Clubhouse Restaurant</h2>
-    <p>Our clubhouse restaurant offers a refined dining experience with panoramic views of the 18th hole. Whether you're enjoying a post-round meal with friends or celebrating a special occasion, our culinary team delivers exceptional cuisine crafted from locally-sourced ingredients.</p>    <h3>Hours of Operation</h3>
-    <ul>
-        <li><strong>Breakfast:</strong> 7:00 AM - 11:00 AM (Weekends only)</li>
-        <li><strong>Lunch:</strong> 11:00 AM - 4:00 PM (Daily)</li>
-        <li><strong>Dinner:</strong> 5:00 PM - 9:00 PM (Thursday - Sunday)</li>
-        <li><strong>Bar:</strong> 11:00 AM - 10:00 PM (Daily)</li>
-    </ul>    <h2>Menu Highlights</h2>    <h3>Starters</h3>
-    <ul>
-        <li><strong>Clubhouse Crab Cakes</strong> - Jumbo lump crab, roasted red pepper aioli, micro greens - $18</li>
-        <li><strong>Burrata & Heirloom Tomatoes</strong> - Fresh basil, balsamic reduction, grilled bread - $14</li>
-        <li><strong>Beef Carpaccio</strong> - Arugula, capers, parmesan, truffle oil - $16</li>
-    </ul>    <h3>Signature Entrees</h3>
-    <ul>
-        <li><strong>Filet Mignon</strong> - 8oz center cut, roasted fingerlings, seasonal vegetables - $42</li>
-        <li><strong>Pan-Seared Salmon</strong> - Lemon butter, wild rice, asparagus - $32</li>
-        <li><strong>Chicken Marsala</strong> - Mushroom marsala sauce, garlic mashed potatoes - $28</li>
-        <li><strong>Clubhouse Burger</strong> - Aged cheddar, bacon, brioche bun, hand-cut fries - $18</li>
-    </ul>    <h3>Sandwiches & Light Fare</h3>
-    <ul>
-        <li><strong>Grilled Chicken Wrap</strong> - Mixed greens, tomato, avocado, ranch - $14</li>
-        <li><strong>Classic Club</strong> - Turkey, bacon, lettuce, tomato, mayo - $15</li>
-        <li><strong>Vegetarian Panini</strong> - Grilled vegetables, fresh mozzarella, pesto - $13</li>
-    </ul>    <h2>The Turn Tavern</h2>
-    <p>Located at the turn between the 9th and 10th holes, The Turn Tavern offers quick service for golfers looking to grab a bite mid-round. Enjoy hot dogs, sandwiches, snacks, and refreshing beverages.</p>    <ul>
-        <li><strong>Hours:</strong> 8:00 AM - 6:00 PM (Daily during golf season)</li>
-        <li><strong>Hot Dog:</strong> $5</li>
-        <li><strong>Sandwich:</strong> $8</li>
-        <li><strong>Snacks & Beverages:</strong> $2-4</li>
-    </ul>    <h2>Private Events & Catering</h2>
-    <p>Our elegant banquet facilities can accommodate groups from 20 to 200 guests for weddings, corporate events, tournaments, and celebrations. Our experienced event coordinators will work with you to create a memorable experience.</p>    <p><strong>Event Services Include:</strong></p>
-    <ul>
-        <li>Customized menus for any occasion</li>
-        <li>Full-service bar options</li>
-        <li>Professional event coordination</li>
-        <li>Audio/visual equipment</li>
-        <li>Indoor and outdoor venue options</li>
-    </ul>    <p>For event inquiries, contact our Events Coordinator at (555) 867-5309 ext. 3 or email events@landscapelinks.com</p>    <h2>Reservations</h2>
-    <p>Reservations are recommended for dinner service, especially on weekends. Walk-ins are welcome based on availability. Call (555) 867-5309 to reserve your table today!</p>
+    </nav>
+
+    <!-- PAGE HEADER (FULL WIDTH) -->
+    <div class="page-header">
+        <h1>Dining at Landscape Links</h1>
+        <p>Exceptional cuisine in an elegant setting</p>
+    </div>
+
+    <!-- CONTENT (CONSTRAINED WIDTH) -->
+    <div class="content-section">
+        <h2>The Clubhouse Restaurant</h2>
+        <p>
+            Our clubhouse restaurant offers a refined dining experience with panoramic views
+            of the 18th hole. Whether you're enjoying a post-round meal with friends or
+            celebrating a special occasion, our culinary team delivers exceptional cuisine
+            crafted from locally-sourced ingredients.
+        </p>
+
+        <h3>Hours of Operation</h3>
+        <ul>
+            <li><strong>Breakfast:</strong> 7:00 AM – 11:00 AM (Weekends only)</li>
+            <li><strong>Lunch:</strong> 11:00 AM – 4:00 PM (Daily)</li>
+            <li><strong>Dinner:</strong> 5:00 PM – 9:00 PM (Thursday – Sunday)</li>
+            <li><strong>Bar:</strong> 11:00 AM – 10:00 PM (Daily)</li>
+        </ul>
+
+        <h2>Menu Highlights</h2>
+
+        <h3>Starters</h3>
+        <ul>
+            <li><strong>Clubhouse Crab Cakes</strong> – $18</li>
+            <li><strong>Burrata & Heirloom Tomatoes</strong> – $14</li>
+            <li><strong>Beef Carpaccio</strong> – $16</li>
+        </ul>
+
+        <h3>Signature Entrees</h3>
+        <ul>
+            <li><strong>Filet Mignon</strong> – $42</li>
+            <li><strong>Pan-Seared Salmon</strong> – $32</li>
+            <li><strong>Chicken Marsala</strong> – $28</li>
+            <li><strong>Clubhouse Burger</strong> – $18</li>
+        </ul>
+
+        <h3>Sandwiches & Light Fare</h3>
+        <ul>
+            <li><strong>Grilled Chicken Wrap</strong> – $14</li>
+            <li><strong>Classic Club</strong> – $15</li>
+            <li><strong>Vegetarian Panini</strong> – $13</li>
+        </ul>
+
+        <h2>The Turn Tavern</h2>
+        <p>
+            Located at the turn between the 9th and 10th holes, The Turn Tavern offers quick
+            service for golfers looking to grab a bite mid-round.
+        </p>
+        <ul>
+            <li><strong>Hours:</strong> 8:00 AM – 6:00 PM</li>
+            <li>Hot Dog – $5</li>
+            <li>Sandwich – $8</li>
+            <li>Snacks & Beverages – $2–4</li>
+        </ul>
+
+        <h2>Private Events & Catering</h2>
+        <p>
+            Our banquet facilities accommodate groups from 20 to 200 guests for weddings,
+            corporate events, and celebrations.
+        </p>
+        <ul>
+            <li>Customized menus</li>
+            <li>Full-service bar</li>
+            <li>Professional coordination</li>
+            <li>Audio/visual equipment</li>
+        </ul>
+
+        <h2>Reservations</h2>
+        <p>
+            Reservations are recommended for dinner service. Call (555) 867-5309 to reserve
+            your table.
+        </p>
+    </div>
+
+    <!-- FOOTER (FULL WIDTH) -->
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-brand">
@@ -101,5 +142,6 @@
             <p>&copy; 2026 Landscape Links Golf Course. All rights reserved.</p>
         </div>
     </footer>
+
 </body>
 </html>
